--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 .adjust-bar {
   -webkit-appearance: none;
   appearance: none;
@@ -340,6 +339,7 @@
   margin-top: 6px;
   font-size: 27px;
   font-weight: 700;
+  font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .main__info {
   width: 61.585%;
@@ -400,12 +400,6 @@
   overflow: auto;
   background: rgba(51, 51, 51, 0.5);
 }
-.modal_open {
-  display: flex;
-}
-.modal_open .modal__content {
-  animation: modal 0.2s ease forwards;
-}
 .modal__title {
   font-size: 27px;
   font-weight: 700;
@@ -457,12 +451,6 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
-@keyframes modal {
-  from {
-    transform: scale(0.2);
-  }
-to-transform: scale(1);
-}
 * {
   box-sizing: border-box;
 }
@@ -494,9 +482,6 @@ html {
 }
 .paginator div {
   width: 16px;
-}
-.paginator_hide {
-  display: none;
 }
 .paginator__arrow {
   opacity: 1;
@@ -537,9 +522,6 @@ html {
 .panel_first {
   margin-top: 20px;
 }
-.panel_last {
-  margin-bottom: 20px;
-}
 .panel__sub {
   font-size: 12px;
   color: #858585;
@@ -568,9 +550,6 @@ html {
   position: absolute;
   top: 0;
   right: 40px;
-}
-.scenarios_hide {
-  display: none;
 }
 .weather {
   display: flex;
@@ -615,4 +594,201 @@ html {
 }
 .panel__icon_clock {
   background: url("assets/panel__icon_clock.svg") center center/contain no-repeat;
+}
+@import url("./fonts/pt_sans.css");
+/*!
+ * Bootstrap v2.3.2
+ *
+ * Copyright 2012 Twitter, Inc
+ * Licensed under the Apache License v2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Designed and built with all the love in the world @twitter by @mdo and @fat.
+ */
+
+footer,
+header,
+nav,
+section {
+  display: block;
+}
+
+html {
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+a:focus {
+  outline: thin dotted #333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+
+a:hover,
+a:active {
+  outline: 0;
+}
+
+img {
+  width: auto\9;
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+  border: 0;
+  -ms-interpolation-mode: bicubic;
+}
+
+button,
+input {
+  margin: 0;
+  font-size: 100%;
+  vertical-align: middle;
+}
+
+button,
+input {
+  *overflow: visible;
+  line-height: normal;
+}
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+button {
+  cursor: pointer;
+  -webkit-appearance: button;
+}
+
+label,
+button,
+input[type="radio"] {
+  cursor: pointer;
+}
+
+@media print {
+  * {
+    color: #000 !important;
+    text-shadow: none !important;
+    background: transparent !important;
+    box-shadow: none !important;
+  }
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
+  a[href]:after {
+    content: " (" attr(href) ")";
+  }
+  a[href^="#"]:after {
+    content: "";
+  }
+  img {
+    page-break-inside: avoid;
+  }
+  img {
+    max-width: 100% !important;
+  }
+  @page  {
+    margin: 0.5cm;
+  }
+}
+
+body {
+  margin: 0;
+  font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 15px;
+  line-height: 20px;
+  color: #222222;
+  background-color: #ffffff;
+}
+
+a {
+  color: #2c3e50;
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  color: #354b60;
+  text-decoration: underline;
+}
+
+ul {
+  padding: 0;
+  margin: 0 0 10px 25px;
+}
+
+li {
+  line-height: 20px;
+}
+
+label,
+input,
+button {
+  font-size: 15px;
+  font-weight: normal;
+  line-height: 20px;
+}
+
+input,
+button {
+  font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input {
+  width: 206px;
+}
+
+input[type="radio"] {
+  margin: 4px 0 0;
+  margin-top: 1px \9;
+  *margin-top: 0;
+  line-height: normal;
+}
+
+input[type="radio"] {
+  width: auto;
+}
+
+input[type="radio"]:focus {
+  outline: thin dotted #333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+
+input:-moz-placeholder {
+  color: #b4bcc2;
+}
+
+input:-ms-input-placeholder {
+  color: #b4bcc2;
+}
+
+input::-webkit-input-placeholder {
+  color: #b4bcc2;
+}
+
+input {
+  margin-left: 0;
+}
+
+input:focus:invalid {
+  color: #b94a48;
+  border-color: #ee5f5b;
+}
+
+input:focus:invalid:focus {
+  border-color: #e9322d;
+  -webkit-box-shadow: 0 0 6px #f8b9b7;
+  -moz-box-shadow: 0 0 6px #f8b9b7;
+  box-shadow: 0 0 6px #f8b9b7;
 }
