--- a/styles.css
+++ b/styles.css
@@ -339,7 +339,6 @@
   margin-top: 6px;
   font-size: 27px;
   font-weight: 700;
-  font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .main__info {
   width: 61.585%;
@@ -400,6 +399,12 @@
   overflow: auto;
   background: rgba(51, 51, 51, 0.5);
 }
+.modal_open {
+  display: flex;
+}
+.modal_open .modal__content {
+  animation: modal 0.2s ease forwards;
+}
 .modal__title {
   font-size: 27px;
   font-weight: 700;
@@ -451,6 +456,12 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
+@keyframes modal {
+  from {
+    transform: scale(0.2);
+  }
+to-transform: scale(1);
+}
 * {
   box-sizing: border-box;
 }
@@ -482,6 +493,9 @@ html {
 }
 .paginator div {
   width: 16px;
+}
+.paginator_hide {
+  display: none;
 }
 .paginator__arrow {
   opacity: 1;
@@ -522,6 +536,9 @@ html {
 .panel_first {
   margin-top: 20px;
 }
+.panel_last {
+  margin-bottom: 20px;
+}
 .panel__sub {
   font-size: 12px;
   color: #858585;
@@ -550,6 +567,9 @@ html {
   position: absolute;
   top: 0;
   right: 40px;
+}
+.scenarios_hide {
+  display: none;
 }
 .weather {
   display: flex;
